# sdl2-game

./: CMakeLists.txt  README.md  run.sh
include/: render.h
src/: main.cc  render.cc
